--- a/yum.yml
+++ b/yum.yml
@@ -9,6 +9,7 @@
      yum:
        name: vi
        state: latest
+     become: true
 
    - name: Install list of packeges
      yum:
@@ -18,5 +19,6 @@
        mypackageList:
        - vim
        - vi
+     become: true
        
 
