used with_items module

--- a/yum.yml
+++ b/yum.yml
@@ -22,5 +22,15 @@
        - vim
        - vi
      become: true
+
+   - name: Install list of packeges
+     yum:
+       name: "{{item}}"
+       state: present
+       update_cache: true
+     with_items:
+      - nano
+      - wget
+     become: true
        
 
