used with items and used different usage for yum module

--- a/yum.yml
+++ b/yum.yml
@@ -24,10 +24,7 @@
      become: true
 
    - name: Install list of packeges
-     yum:
-       name: "{{item}}"
-       state: present
-       update_cache: true
+     yum: name="{{item}}" state=present update_cache=true
      with_items:
       - nano
       - wget
