--- a/yum.yml
+++ b/yum.yml
@@ -12,7 +12,7 @@
        update_cache: true
      become: true
 
-   - name: Install list of packeges
+   - name: Install vim and vi
      yum:
        name: "{{ mypackageList }}"
        state: present
@@ -21,13 +21,6 @@
        mypackageList:
        - vim
        - vi
-     become: true
-
-   - name: Install list of packeges
-     yum: name="{{item}}" state=present update_cache=true
-     with_items:
-      - nano
-      - wget
      become: true
        
 
