--- a/yum.yml
+++ b/yum.yml
@@ -5,21 +5,21 @@
    - name: Make sure that we can connect to the machine
      ping:
 
-   - name: Upgrade vi
+   - name: removed 
      yum:
-       name: vim
-       state: absent
+       name: "{{ item }}"
+       state: removed
+     loop:
+      - net-tools
+      - vim
      become: true
 
-   - name: Install net-tools and vi
+   - name: Installed
      yum:
        name: "{{ item }}"
        state: present
        update_cache: true
      loop:
        - vi
-       - net-tools
        - telnet
      become: true
-       
-
