--- a/win_ping.yml
+++ b/win_ping.yml
@@ -4,7 +4,7 @@
     - name: My first winrm ping
       win_ping:
 
-    - name: My second winrm ping
+    - name: My second
       shell:
           executable: pwd
       register: foo
