--- a/win_ping.yml
+++ b/win_ping.yml
@@ -1,5 +1,7 @@
 ---
-- hosts: win
+- hosts: win 
+  gather_facts: false
+
   tasks:
     - name: My first winrm ping
       win_ping:
@@ -13,4 +15,4 @@
         - wins
 
     - debug:
-        msg: homedir_out
+        msg: {{ homedir_out }}
