--- a/win_ping.yml
+++ b/win_ping.yml
@@ -7,7 +7,7 @@
       win_ping:
 
     - name: Run a command under a non-Powershell interpreter (cmd in this case)
-      win_shell: echo %HOMEDIR%
+      win_shell: echo %WINDIR%
       args: 
         executable: cmd
       register: homedir_out
