--- a/varExample/roles/common/meta/main.yml
+++ b/varExample/roles/common/meta/main.yml
@@ -2,6 +2,7 @@ galaxy_info:
   author: ertanc
   description: to test roles
   company: ertanc Company
+  platforms: Linux
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -39,14 +40,14 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: myVarRole
-    # List tags for your role here, one per line. A tag is a keyword that describes
-    # and categorizes the role. Users find roles by searching for tags. Be sure to
-    # remove the '[]' above, if you add tags to this list.
-    #
-    # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
-    #       Maximum 20 tags per role.
+  galaxy_tags: myvarroleexample
+  # List tags for your role here, one per line. A tag is a keyword that describes
+  # and categorizes the role. Users find roles by searching for tags. Be sure to
+  # remove the '[]' above, if you add tags to this list.
+  #
+  # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
+  #       Maximum 20 tags per role.
 
 dependencies: []
-  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
+# List your role dependencies here, one per line. Be sure to remove the '[]' above,
+# if you add dependencies to this list.
