--- a/varExample/roles/common/meta/main.yml
+++ b/varExample/roles/common/meta/main.yml
@@ -2,7 +2,8 @@ galaxy_info:
   author: ertanc
   description: to test roles
   company: ertanc Company
-  platforms: Linux
+  platforms: 
+    - Linux
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -40,7 +41,8 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: myvarroleexample
+  galaxy_tags:
+    - myvarroleexample
   # List tags for your role here, one per line. A tag is a keyword that describes
   # and categorizes the role. Users find roles by searching for tags. Be sure to
   # remove the '[]' above, if you add tags to this list.
